fix: center album-meta on mobile when title is longer

--- a/css/style.css
+++ b/css/style.css
@@ -323,6 +323,10 @@ img {
     flex-direction: column;
     text-align: center;
   }
+
+  .album-meta {
+    justify-content: center;
+  }
   
   .album-cover {
     width: 120px;
